# devbot

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/routers/: chat.py  debug.py  github.py  guilds.py
backend/app/services/: discord.py  ollama.py
bot/: .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json
bot/src/: config.ts  deploy-commands.ts  index.ts
bot/src/commands/: chat.ts  clear.ts  index.ts  ping.ts  repos.ts  setchannel.ts  status.ts
